--- a/src/UI/sd-ui/src/components/leaderboard/LeaderboardPage.css
+++ b/src/UI/sd-ui/src/components/leaderboard/LeaderboardPage.css
@@ -1,3 +1,9 @@
+.leaderboard-container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
 .leaderboard-table {
   width: 100%;
   margin-top: 20px;
