--- a/src/UI/sd-ui/src/components/teams/TeamCard.css
+++ b/src/UI/sd-ui/src/components/teams/TeamCard.css
@@ -43,82 +43,7 @@
   margin-top: 0.25rem;
 }
 
-.team-news,
-.team-schedule {
-  margin-top: 2rem;
-}
-
-.team-news h3,
-.team-schedule h3 {
-  font-size: 1.25rem;
-  color: var(--highlight-color, #ffc107);
-  margin-bottom: 0.5rem;
-  border-bottom: 1px solid var(--highlight-color, #ffc107);
-  padding-bottom: 0.25rem;
-}
-
-.team-news ul {
-  list-style: disc;
-  padding-left: 1.5rem;
-}
-
-.team-news li {
-  margin-bottom: 0.4rem;
-}
-
-.team-news a {
-  color: #0dcaf0;
-  text-decoration: none;
-}
-
-.team-news a:hover {
-  text-decoration: underline;
-}
-
-.team-schedule table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 0.5rem;
-  font-size: 0.95rem;
-}
-
-.team-schedule th,
-.team-schedule td {
-  padding: 0.6rem;
-  border: 1px solid #444;
-  text-align: left;
-}
-
-.team-schedule th {
-  background-color: #343a40;
-  color: #f1f1f1;
-}
-
-.team-schedule tr:nth-child(even) {
-  background-color: #2a2d33;
-}
-
-.team-schedule .result-loss {
-  color: #f44336 !important;
-  font-weight: 600;
-}
-
-.team-schedule .result-win {
-  color: #00e676;
-  font-weight: 600;
-}
-
-.team-link {
-  color: var(--highlight-color, #ffc107);
-  text-decoration: underline;
-  font-weight: 500;
-  transition: color 0.2s ease;
-}
-
-.team-link:hover {
-  color: #0dcaf0;
-}
-
+/* Responsive tweaks */
 @media (max-width: 600px) {
   .team-logo {
     width: 100px;
@@ -130,10 +55,3 @@
     font-size: 1.5rem;
   }
 }
-
-.team-schedule tbody tr:hover {
-  background-color: #3a3f47;
-}
-
-
-
