--- a/src/UI/sd-ui/src/components/signup/SignupPage.css
+++ b/src/UI/sd-ui/src/components/signup/SignupPage.css
@@ -44,7 +44,7 @@
   background-color: #444;
 }
 
-.third-party-button {
+.third-party-button:disabled {
   cursor: not-allowed;
   opacity: 0.6; /* optional for visual clarity */
 }
